@@ -19,7 +19,7 @@ from bzrlib import (
     osutils,
     )
 from bzrlib.inventory import InventoryEntry
-from bzrlib.trace import mutter
+from bzrlib.trace import mutter, is_quiet
 from bzrlib.symbol_versioning import deprecated_function
 
 
@@ -314,6 +314,8 @@ class _ChangeReporter(object):
         :param kind: A pair of file kinds, as generated by Tree._iter_changes.
             None indicates no file present.
         """
+        if is_quiet():
+            return
         if paths[1] == '' and versioned == 'added' and self.suppress_root_add:
             return
         if versioned == 'unversioned':
